Small changes to the build.gradle file, in order to include the vector api and directly start the system simd command when cli is started.